# operative

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.alpha  Dockerfile.os  Dockerfile.xvfb  LICENSE  LLM.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-release.yml  release.yml  test.yml  tests.yml  xvfb-build.yml
docker/: Dockerfile  Dockerfile.desktop  Dockerfile.xvfb  hanzo-dev-mcp-setup.sh  hanzo-mcp-fix.sh  start_mcp_servers.sh
docker/image/: entrypoint.sh  index.html  start_all.sh  tint2_startup.sh  x11vnc_startup.sh
docker/image/.config/tint2/: tint2rc
docker/image/.operative/: entrypoint.sh  hanzo-mcp.sh  http_server.py  start_all.sh  x11vnc_startup.sh
docker/image/.streamlit/: config.toml  style.css
docs/: index.mdx  meta.json
image/: entrypoint.sh  http_server.py  index.html  start_all.sh
image/.config/tint2/: tint2rc
image/static_content/: index.html
operative/: loop.py  operative.py  prompt.py  requirements.txt  streamlit.py
operative/tools/: base.py  bash.py  collection.py  computer.py  edit.py  groups.py  run.py
operator/: streamlit.py
tests/: conftest.py  loop_test.py  streamlit_test.py
tests/tools/: bash_test.py  computer_test.py  edit_test.py
